airflow_docker/logs/dag_id=sql_hook_to_s3/run_id=scheduled__2023-11-08T02:30:00+00:00/task_id=load_data_from_pg_to_s3/attempt=2.log
[2023-11-08T14:34:52.778+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T02:30:00+00:00 [queued]>
[2023-11-08T14:34:52.870+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T02:30:00+00:00 [queued]>
[2023-11-08T14:34:52.871+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 6
[2023-11-08T14:34:53.006+0000] {taskinstance.py:1382} INFO - Executing <Task(PythonOperator): load_data_from_pg_to_s3> on 2023-11-08 02:30:00+00:00
[2023-11-08T14:34:53.030+0000] {standard_task_runner.py:57} INFO - Started process 540 to run task
[2023-11-08T14:34:53.048+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'sql_hook_to_s3', 'load_data_from_pg_to_s3', 'scheduled__2023-11-08T02:30:00+00:00', '--job-id', '107', '--raw', '--subdir', 'DAGS_FOLDER/sql_hook_to_s3_dag.py', '--cfg-path', '/tmp/tmprk1ce3n9']
[2023-11-08T14:34:53.054+0000] {standard_task_runner.py:85} INFO - Job 107: Subtask load_data_from_pg_to_s3
[2023-11-08T14:34:53.440+0000] {task_command.py:416} INFO - Running <TaskInstance: sql_hook_to_s3.load_data_from_pg_to_s3 scheduled__2023-11-08T02:30:00+00:00 [running]> on host 5cb9101badf1
[2023-11-08T14:34:53.920+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_EMAIL='safarnejad.ho@gmail.com' AIRFLOW_CTX_DAG_OWNER='safarnejad' AIRFLOW_CTX_DAG_ID='sql_hook_to_s3' AIRFLOW_CTX_TASK_ID='load_data_from_pg_to_s3' AIRFLOW_CTX_EXECUTION_DATE='2023-11-08T02:30:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-11-08T02:30:00+00:00'
[2023-11-08T14:34:53.958+0000] {base.py:73} INFO - Using connection ID 'orders-pg-conn' for task execution.
[2023-11-08T14:34:53.995+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 192, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 209, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sql_hook_to_s3_dag.py", line 25, in load_data_to_file
    cursor.execute('SELECT * FROM order WHERE date <= 20220501')
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^

[2023-11-08T14:34:54.031+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=sql_hook_to_s3, task_id=load_data_from_pg_to_s3, execution_date=20231108T023000, start_date=20231108T143452, end_date=20231108T143454
[2023-11-08T14:34:54.071+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 107 for task load_data_from_pg_to_s3 (syntax error at or near "order"
LINE 1: SELECT * FROM order WHERE date <= 20220501
                      ^
; 540)
[2023-11-08T14:34:54.123+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-08T14:34:54.149+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
